# posfol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic-idea.md  main.cpp  node-hierarchy.xmind  readme.md
.github/workflows/: cmake.yml
codegen/: CMakeLists.txt  ClassContext.cpp  CodeGen.cpp  CodeGen.h  FunctionContext.cpp  TypeUtil.cpp
parse/: parse.h  parser.y  token.h
parser/: CMakeLists.txt  parser.h  parser.y  scanner.l  token.h
semantic/: CMakeLists.txt  basic-idea.md  check.cpp  check.h  node.h  sem_util.cpp  sem_util.h  symbol.cpp  symbol.h  type.h
testCode/: a_plus_b.pfl  p1.pfl  p2.pfl  p3.pfl  sample.pfl  test.pfl  test_class.pfl  test_lambda.pfl
tree/: node.h  type.h
visualization/: AST_tree.json  index.html  index.js  index1.html  old_disp.html  old_test.js
